{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 621,
  "lineage": "ef2f77d7-e3f0-bb63-ffe1-8584ee34a4e1",
  "resources": [
    {
      "mode": "data",
      "type": "aws_elb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:772290144575:loadbalancer/a6dfc06989bf0488aa7da03f7f9bca11",
            "availability_zones": [
              "eu-west-2a",
              "eu-west-2b",
              "eu-west-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "dns_name": "a6dfc06989bf0488aa7da03f7f9bca11-1506933451.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "TCP:30843",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "a6dfc06989bf0488aa7da03f7f9bca11",
            "idle_timeout": 60,
            "instances": [
              "i-02ebb5a59f2d03df8",
              "i-0f5b243183aebf582"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 30843,
                "instance_protocol": "tcp",
                "lb_port": 80,
                "lb_protocol": "tcp"
              }
            ],
            "name": "a6dfc06989bf0488aa7da03f7f9bca11",
            "security_groups": [
              "sg-09244bcf5cb88b248"
            ],
            "source_security_group": "772290144575/k8s-elb-a6dfc06989bf0488aa7da03f7f9bca11",
            "source_security_group_id": "sg-09244bcf5cb88b248",
            "subnets": [
              "subnet-085e62efe863d9ffb",
              "subnet-0eacc2f9371b23cb1",
              "subnet-0f99b5aa1ace9005d"
            ],
            "tags": {
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "owned",
              "kubernetes.io/service-name": "example-webapp-namespace/example-webapp-svc"
            },
            "zone_id": "ZHURV8PSTC4K8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "example-webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "example-webapp-namespace",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "name": "example-webapp"
                },
                "name": "example-webapp-namespace",
                "resource_version": "848",
                "uid": "0a646e40-a3a0-4a18-83fb-6a3ae98f5426"
              }
            ]
          },
          "dependencies": [
            "data.aws_eks_cluster.cluster",
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-cluster.module.eks.aws_eks_cluster.this",
            "module.eks-cluster.module.eks.aws_iam_role.cluster",
            "module.eks-cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.workers",
            "module.eks-cluster.module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks-cluster.module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks-cluster.module.eks.aws_security_group_rule.cluster_private_access",
            "module.eks-cluster.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks-cluster.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks-cluster.module.eks.data.aws_partition.current",
            "module.eks-cluster.module.eks.null_resource.wait_for_cluster",
            "module.eks-cluster.module.vpc.aws_eip.nat",
            "module.eks-cluster.module.vpc.aws_subnet.private",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "example-webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "example-webapp-namespace/example-webapp-svc",
            "metadata": [
              {
                "generation": 0,
                "name": "example-webapp-svc",
                "namespace": "example-webapp-namespace",
                "resource_version": "7024",
                "uid": "6dfc0698-9bf0-488a-a7da-03f7f9bca118"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.179.92",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "load_balancer_source_ranges": [
                  "88.98.247.243/32"
                ],
                "port": [
                  {
                    "node_port": 30843,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "example-webapp"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a6dfc06989bf0488aa7da03f7f9bca11-1506933451.eu-west-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_eks_cluster.cluster",
            "kubernetes_namespace.example-webapp",
            "kubernetes_pod.example-webapp",
            "module.build-example-webapp.aws_ecr_repository.repo",
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-cluster.module.eks.aws_eks_cluster.this",
            "module.eks-cluster.module.eks.aws_iam_role.cluster",
            "module.eks-cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.workers",
            "module.eks-cluster.module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks-cluster.module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks-cluster.module.eks.aws_security_group_rule.cluster_private_access",
            "module.eks-cluster.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks-cluster.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks-cluster.module.eks.data.aws_partition.current",
            "module.eks-cluster.module.eks.null_resource.wait_for_cluster",
            "module.eks-cluster.module.vpc.aws_eip.nat",
            "module.eks-cluster.module.vpc.aws_subnet.private",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772290144575:security-group/sg-036aa62d7e2d9e148",
            "description": "Security Group for EKS Worker Nodes",
            "egress": [],
            "id": "sg-036aa62d7e2d9e148",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20210328150515577300000007",
            "name_prefix": "all_worker_management",
            "owner_id": "772290144575",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01bf6363532b4ba75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "cloudwatch",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "amazon-cloudwatch",
            "metadata": [
              {
                "annotations": {
                  "name": "amazon-cloudwatch"
                },
                "generation": 0,
                "name": "amazon-cloudwatch",
                "resource_version": "847",
                "uid": "bbe72519-2716-4de9-a9dd-8ee24b7a7356"
              }
            ]
          },
          "dependencies": [
            "data.aws_eks_cluster.cluster",
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-cluster.module.eks.aws_eks_cluster.this",
            "module.eks-cluster.module.eks.aws_iam_role.cluster",
            "module.eks-cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.workers",
            "module.eks-cluster.module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks-cluster.module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks-cluster.module.eks.aws_security_group_rule.cluster_private_access",
            "module.eks-cluster.module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks-cluster.module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks-cluster.module.eks.data.aws_partition.current",
            "module.eks-cluster.module.eks.null_resource.wait_for_cluster",
            "module.eks-cluster.module.vpc.aws_eip.nat",
            "module.eks-cluster.module.vpc.aws_subnet.private",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772290144575:security-group/sg-06d2af5a05a0d4061",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d2af5a05a0d4061",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d77b91d8f9815d7"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "example-webapp-eks-1VfrQgpg20210328150515580000000008",
            "name_prefix": "example-webapp-eks-1VfrQgpg",
            "owner_id": "772290144575",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Example",
              "Name": "example-webapp-eks-1VfrQgpg-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf6363532b4ba75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772290144575:security-group/sg-08d77b91d8f9815d7",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d77b91d8f9815d7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-09244bcf5cb88b248"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d2af5a05a0d4061"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d2af5a05a0d4061"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "example-webapp-eks-1VfrQgpg20210328150516327300000009",
            "name_prefix": "example-webapp-eks-1VfrQgpg",
            "owner_id": "772290144575",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Example",
              "Name": "example-webapp-eks-1VfrQgpg-eks_worker_sg",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf6363532b4ba75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-912676314",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06d2af5a05a0d4061",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3394520495",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d2af5a05a0d4061",
            "self": false,
            "source_security_group_id": "sg-08d77b91d8f9815d7",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.workers",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1320433136",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08d77b91d8f9815d7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.workers",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3484329341",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08d77b91d8f9815d7",
            "self": false,
            "source_security_group_id": "sg-06d2af5a05a0d4061",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.workers",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2625845049",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08d77b91d8f9815d7",
            "self": false,
            "source_security_group_id": "sg-06d2af5a05a0d4061",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.cluster",
            "module.eks-cluster.module.eks.aws_security_group.workers",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1387286836",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08d77b91d8f9815d7",
            "self": false,
            "source_security_group_id": "sg-08d77b91d8f9815d7",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.eks.aws_security_group.workers",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09eb9a64b330b379d",
            "domain": "vpc",
            "id": "eipalloc-0e79ebaeb71616831",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-00e4512839f8b5dbc",
            "private_dns": "ip-10-0-4-123.eu-west-2.compute.internal",
            "private_ip": "10.0.4.123",
            "public_dns": "ec2-35-176-12-123.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.12.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "example-webapp-vpc-eu-west-2a",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772290144575:internet-gateway/igw-0a666740112763767",
            "id": "igw-0a666740112763767",
            "owner_id": "772290144575",
            "tags": {
              "Name": "example-webapp-vpc",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared"
            },
            "vpc_id": "vpc-01bf6363532b4ba75"
          },
          "dependencies": [
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e79ebaeb71616831",
            "id": "nat-04cdd9e21b39785ef",
            "network_interface_id": "eni-00e4512839f8b5dbc",
            "private_ip": "10.0.4.123",
            "public_ip": "35.176.12.123",
            "subnet_id": "subnet-0f99b5aa1ace9005d",
            "tags": {
              "Name": "example-webapp-vpc-eu-west-2a",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared"
            }
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_eip.nat",
            "module.eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.eks-cluster.module.vpc.aws_subnet.public",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c13b3fe06d2dfab21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04cdd9e21b39785ef",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c13b3fe06d2dfab2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_eip.nat",
            "module.eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.eks-cluster.module.vpc.aws_nat_gateway.this",
            "module.eks-cluster.module.vpc.aws_route_table.private",
            "module.eks-cluster.module.vpc.aws_subnet.public",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a666740112763767",
            "id": "r-rtb-07324cb926a2ea96c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07324cb926a2ea96c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.eks-cluster.module.vpc.aws_route_table.public",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c13b3fe06d2dfab2",
            "owner_id": "772290144575",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04cdd9e21b39785ef",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-webapp-vpc-private",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared"
            },
            "vpc_id": "vpc-01bf6363532b4ba75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07324cb926a2ea96c",
            "owner_id": "772290144575",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a666740112763767",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-webapp-vpc-public",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared"
            },
            "vpc_id": "vpc-01bf6363532b4ba75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f028fea75b94ed6",
            "route_table_id": "rtb-0c13b3fe06d2dfab2",
            "subnet_id": "subnet-09a7465a41b6df07e"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_route_table.private",
            "module.eks-cluster.module.vpc.aws_subnet.private",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a7f23cb64134b80",
            "route_table_id": "rtb-0c13b3fe06d2dfab2",
            "subnet_id": "subnet-0b2e92df179d0a8c7"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_route_table.private",
            "module.eks-cluster.module.vpc.aws_subnet.private",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061ed50872cbdfadd",
            "route_table_id": "rtb-0c13b3fe06d2dfab2",
            "subnet_id": "subnet-09144cef21ce0e9bc"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_route_table.private",
            "module.eks-cluster.module.vpc.aws_subnet.private",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030e0480c41d50d79",
            "route_table_id": "rtb-07324cb926a2ea96c",
            "subnet_id": "subnet-0f99b5aa1ace9005d"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_route_table.public",
            "module.eks-cluster.module.vpc.aws_subnet.public",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0535b5727e50b8c35",
            "route_table_id": "rtb-07324cb926a2ea96c",
            "subnet_id": "subnet-0eacc2f9371b23cb1"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_route_table.public",
            "module.eks-cluster.module.vpc.aws_subnet.public",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c4d9a71057fe2df",
            "route_table_id": "rtb-07324cb926a2ea96c",
            "subnet_id": "subnet-085e62efe863d9ffb"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_route_table.public",
            "module.eks-cluster.module.vpc.aws_subnet.public",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772290144575:subnet/subnet-09a7465a41b6df07e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09a7465a41b6df07e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772290144575",
            "tags": {
              "Name": "example-webapp-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "example-webapp-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01bf6363532b4ba75"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772290144575:subnet/subnet-0b2e92df179d0a8c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b2e92df179d0a8c7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772290144575",
            "tags": {
              "Name": "example-webapp-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "example-webapp-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01bf6363532b4ba75"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772290144575:subnet/subnet-09144cef21ce0e9bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09144cef21ce0e9bc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772290144575",
            "tags": {
              "Name": "example-webapp-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "example-webapp-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01bf6363532b4ba75"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772290144575:subnet/subnet-0f99b5aa1ace9005d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0f99b5aa1ace9005d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "772290144575",
            "tags": {
              "Name": "example-webapp-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "example-webapp-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01bf6363532b4ba75"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772290144575:subnet/subnet-0eacc2f9371b23cb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0eacc2f9371b23cb1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "772290144575",
            "tags": {
              "Name": "example-webapp-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "example-webapp-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01bf6363532b4ba75"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772290144575:subnet/subnet-085e62efe863d9ffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-085e62efe863d9ffb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "772290144575",
            "tags": {
              "Name": "example-webapp-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "example-webapp-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01bf6363532b4ba75"
          },
          "dependencies": [
            "module.eks-cluster.data.aws_availability_zones.available",
            "module.eks-cluster.module.vpc.aws_vpc.this",
            "module.eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772290144575:vpc/vpc-01bf6363532b4ba75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0edc3c55a30acf3e1",
            "default_route_table_id": "rtb-04df6ea2a11622b1d",
            "default_security_group_id": "sg-011c83a36c9c0a774",
            "dhcp_options_id": "dopt-0f4dba007200ba2a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01bf6363532b4ba75",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04df6ea2a11622b1d",
            "owner_id": "772290144575",
            "tags": {
              "Name": "example-webapp-vpc",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared"
            },
            "tags_all": {
              "Name": "example-webapp-vpc",
              "kubernetes.io/cluster/example-webapp-eks-1VfrQgpg": "shared"
            }
          },
          "dependencies": [
            "module.eks-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}